Bug 442707 - Behavior settings for "Switch to output view upon message type" never get saved
Summary: Behavior settings for "Switch to output view upon message type" never get saved
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.1
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-19 19:39 UTC by Antonio Prcela
Modified: 2021-10-09 21:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Prcela 2021-09-19 19:39:27 UTC
SUMMARY
Changing the setting "Switch to output view upon message type" doesn't get applied.

STEPS TO REPRODUCE
1. Go to Settings -> Configure Kate -> Behavior
2. Change to anything else than "Error" in the drop-down menu "Switch to output view upon message type"
3. Hit Apply

OBSERVED RESULT
Check katerc, no change

EXPECTED RESULT
Check katerc, option changed

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Kernel Version: 5.14.5-1-MANJARO (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 2700X Eight-Core Processor
Memory: 15,6 GiB of RAM
Graphics Processor: Radeon RX 570 Series

ADDITIONAL INFORMATION
Searching trough the Kate source code, I noticed that there is no writeEntry for this setting, only readEntry. Is that the source of the problem? 

https://invent.kde.org/utilities/kate/-/blob/master/kate/kateconfigdialog.cpp#L91
https://invent.kde.org/utilities/kate/-/blob/master/kate/kateconfigdialog.cpp#L338
https://invent.kde.org/utilities/kate/-/blob/master/kate/kateoutputview.cpp#L233
Comment 1 Christoph Cullmann 2021-10-03 19:29:35 UTC
Git commit bc6c1a9328316ec660377e22638922341ddd5396 by Christoph Cullmann.
Committed on 03/10/2021 at 19:29.
Pushed by cullmann into branch 'master'.

save 'Show output view for message type' setting

M  +1    -1    kate/kateconfigdialog.cpp

https://invent.kde.org/utilities/kate/commit/bc6c1a9328316ec660377e22638922341ddd5396
Comment 2 Christoph Cullmann 2021-10-03 19:30:23 UTC
Good catch, sorry for that.
Was too dumb to copy'n'paste the right code there :/
Comment 3 Christoph Cullmann 2021-10-09 21:22:08 UTC
Git commit 3c49ff662b7e87a4a3012650ded4dcdcb9f6d526 by Christoph Cullmann.
Committed on 09/10/2021 at 21:21.
Pushed by cullmann into branch 'lsp2clipboard'.

save 'Show output view for message type' setting

M  +1    -1    kate/kateconfigdialog.cpp

https://invent.kde.org/utilities/kate/commit/3c49ff662b7e87a4a3012650ded4dcdcb9f6d526