save 'Show output view for message type' setting

BUG: 442707